--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-dom": "^18.2.0",
     "react-flow-renderer": "^10.3.14",
     "react-markdown": "^8.0.3",
+    "react-modal": "^3.15.1",
     "react-scripts": "5.0.1",
     "remark-gfm": "^3.0.1",
     "typescript": "^4.7.4",
@@ -42,5 +43,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/react-modal": "^3.13.1"
   }
 }
